--- a/workflows/deploy.yml
+++ b/workflows/deploy.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build Docker image
         run: |
           cd porfolio
-          docker build -t ${{ secrets.DOCKER_USERNAME }}/portfolio:latest .
+          docker build -t ${{ secrets.DOCKER_USERNAME }}/art:latest .  # Changed to 'art'
 
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -35,7 +35,7 @@ jobs:
       - name: Push Docker image
         run: |
           cd porfolio
-          docker push ${{ secrets.DOCKER_USERNAME }}/portfolio:latest
+          docker push ${{ secrets.DOCKER_USERNAME }}/art:latest  # Changed to 'art'
 
       - name: Deploy to GCP
         env:
@@ -53,20 +53,18 @@ jobs:
           ssh-keyscan -H ${{ secrets.VM_HOST }} >> ~/.ssh/known_hosts
 
           # SSH into the GCP VM and execute the deployment commands
-          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa kubwimanaeddy1@${GCP_VM_IP} << EOF
+          ssh -o StrictHostKeyChecking=no -i ~/.ssh/id_rsa smuggerteey@${GCP_VM_IP} << EOF
             # Add user to the docker group if not already added
-            sudo usermod -aG docker kubwimanaeddy1
+            sudo usermod -aG docker smuggerteey
             
             # Restart shell to recognize group change (might require a re-login, so next time this would be automatic)
             # Pull the latest Docker image
-            docker pull ${{ secrets.DOCKER_USERNAME }}/portfolio:latest
+            docker pull ${{ secrets.DOCKER_USERNAME }}/art:latest  # Changed to 'art'
 
             # Stop and remove the old container if it exists
-            docker stop portfolio || true
-            docker rm portfolio || true
+            docker stop art || true  # Changed to 'art'
+            docker rm art || true  # Changed to 'art'
 
             # Run the Docker container
-            docker run -d -p 5000:5000 --name portfolio ${{ secrets.DOCKER_USERNAME }}/portfolio:latest
+            docker run -d -p 5000:5000 --name art ${{ secrets.DOCKER_USERNAME }}/art:latest  # Changed to 'art'
           EOF
-
-                
