--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,12 +2,13 @@ version: "3.8"
 
 services:
   web:
-    build:  build: ./porfolio  # This points to the correct directory where your Dockerfile is located
+    build: ./porfolio  # Corrected to avoid redundant 'build' keyword
     ports:
       - "5000:5000"
     environment:
       - REDIS_URL=redis://redis:6379
       - DATABASE_URL=mysql://flaskapp:${MYSQL_PASSWORD}@mysql/flaskdb
+      - MYSQL_PASSWORD=${MYSQL_PASSWORD}  # Make sure MYSQL_PASSWORD is passed
     depends_on:
       - redis
       - mysql
@@ -20,20 +21,30 @@ services:
       - "6379:6379"
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      retries: 3
+      start_period: 30s
 
   mysql:
     image: "mysql:5.7"
     environment:
-      MYSQL_ROOT_PASSWORD: Tino2025!!!
+      MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
       MYSQL_DATABASE: digitalart
       MYSQL_USER: Tchagaka
-      MYSQL_PASSWORD: Tino2025!!!
+      MYSQL_PASSWORD: ${MYSQL_PASSWORD}  # Make sure MYSQL_PASSWORD is passed as an environment variable
     ports:
       - "3306:3306"
     volumes:
       - mysql-data:/var/lib/mysql
     networks:
       - mynetwork
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-u", "root", "-p${MYSQL_ROOT_PASSWORD}"]
+      interval: 30s
+      retries: 3
+      start_period: 30s
 
 volumes:
   mysql-data:
